Barchart added and changed colors

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <!-------Header------>
     <header>
-      <nav class="container-fluid">
+        <nav class="container-fluid">
             <div class="row">
                 <div class="col-xs-12 nav-bar navbar-fixed-top">
                     <a href="#" class="title">Comic Character Dashboard</a>
@@ -36,8 +36,38 @@
                 </div>
             </div>
         </nav>
-     </header>
+    </header>
 
+
+    <main>
+        <section id="alignment-scatter">
+            <div class="row">
+                <div class="col-sm-12 col-md-6">
+                    <header class="alignment-header">
+                        <h6>Barchart alignment</h6>
+                    </header>
+                    <div class="chart-content">
+                        <p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, </p>
+                    </div>
+                    <div id="bar-alignment">
+                        <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();">Reset</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6">
+                <header class="scatter-header">
+                    <h6>Scatterploter showing </h6>
+                </header>
+                <div class="chart-content">
+                    <p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, </p>
+                </div>
+                <div id="bar-alignment">
+                    <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();">Reset</a>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 </body>
