added proper comments to bar chart

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <main>
         <section id="alignment-scatter">
             <div class="row">
-                <div class="col-sm-12 col-md-6">
+                <div class="col-sm-12 col-md-6 alignment">
                     <header class="alignment-header">
                         <h6>Barchart alignment</h6>
                     </header>
@@ -55,14 +55,14 @@
                 </div>
             </div>
 
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-6 scatterplot-appearance">
                 <header class="scatter-header">
-                    <h6>Scatterploter showing </h6>
+                    <h6>Scatterploter Appearance </h6>
                 </header>
                 <div class="chart-content">
                     <p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, </p>
                 </div>
-                <div id="bar-alignment">
+                <div id="appearance">
                     <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();">Reset</a>
                 </div>
             </div>
