Hair color pie chart added

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <header class="chart-header">
                         <h6>Eye Color</h6>
                     </header>
-                    <div id="eye-color">
+                    <div id="eye-color" class="chart">
                     <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();">Reset</a>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                     <header class="chart-header">
                         <h6>Hair Color</h6>
                     </header>
-                    <div id="hair-color">
+                    <div id="hair-color" class="chart">
                     <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();">Reset</a>
                     </div>
                 </div>
