--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             <div class="row">
                 <div class="col-xs-12 nav-bar navbar-fixed-top">
                     <a href="#" class="title">Comic Character Dashboard</a>
-                    <button id="reset-all" class="btn btn-sm btn-default float-right">Reset All</button>
+                    <div id="reset-all">
+                        <a href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -59,16 +61,31 @@
                     </div>
                 </div>
 
-                <div class="col-sm-8 col-md-4 sidebar">
-                    <div class="row">
-                        <div class="col-12 icons">
-                            <div><i class="fas fa-male gender-icon p-5" style="color:#4682B4"></i></div>
+                <!-------Gender Icons------>
+
+                <div class="col-sm-8 col-md-4 sidebar container-fluid">
+                    <div class="row gender-percent">
+                        <div class="col-6 icons">
+                            <div><i class="fas fa-male gender-icon" style="color:#4682B4"></i></div>
                         </div>
-                        <div class="col-12 icons">
-                            <div><i class="fas fa-female gender-icon p-5" style="color:#ff6666"></i></div>
+                        <div class="col-6 percent">
+                            <div id="male-percent"></div>
                         </div>
-                        <div class="col-12 icons">
+                    </div>
+                    <div class="row gender-percent">
+                        <div class="col-6 icons">
+                            <div><i class="fas fa-female gender-icon" style="color:#ff6666"></i></div>
+                        </div>
+                        <div class="col-6 percent">
+                            <div id="female-percent"></div>
+                        </div>
+                    </div>
+                    <div class="row gender-percent">
+                        <div class="col-6 icons">
                             <div><i class="fas fa-genderless gender-icon p-5" style="color:#77b300"></i></div>
+                        </div>
+                        <div class="col-6 percent">
+                            <div id="others-percent"></div>
                         </div>
                     </div>
                 </div>
