gender icons styles modified

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </div>
                     <div class="row gender-percent">
                         <div class="col-6 icons">
-                            <div><i class="fas fa-genderless gender-icon p-5" style="color:#77b300"></i></div>
+                            <div><i class="fas fa-genderless gender-icon" style="color:#77b300"></i></div>
                         </div>
                         <div class="col-6 percent">
                             <div id="others-percent"></div>
