--- a/index.html
+++ b/index.html
@@ -170,8 +170,25 @@
                 </div>
             </div>
         </section>
+<!--Row chart---->
+   <section id="align" class="container-fluid">
+            <div class="row">
 
-
+                <div class="col-sm-12 col-md-8 alignment">
+                    <div class="content-wrapper">
+                        <header class="chart-header">
+                            <h6>Barchart alignment</h6>
+                        </header>
+                        <div class="chart-content">
+                            <p> Lorem ipsum dolor sit amet, c. Ut wisi enim ad minim veniam, </p>
+                        </div>
+                        <div id="row-alignment">
+                            <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();">Reset</a>
+                        </div>
+                    </div>
+                </div>
+        </div>
+        </section>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
