--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!--JS Codes-->
     <script type="text/javascript" src="static/js/graph.js"></script>
-    <script type="text/javascript" src="static/js/data.js"></script>
+    <script type="text/javascript" src="static/js/script.js"></script>
 
 </head>
 
@@ -241,21 +241,22 @@
                 </div>
         </section>
 ---->
-        <!-------Footer------>
+       
+    </main>
+     <!-------Footer------>
 
         <footer>
-            <div class="page-footer fixed-bottom container-fluid">
-                <div class ="copyright">
-                <h6><i class="far fa-copyright"></i> Created by Stephy 2019</h6>
+            <div class="page-footer container-fluid">
+                <div class="row">               
+                <div class ="col-sm-6 copyright">
+                <h5> &copy;Created by Stephy 2019</h5>
                 </div>
-                <div class="return-top">
+                <div class="col-sm-6 return-top">
                     <a href="#nav-header"><i class="fas fa-arrow-circle-up"></i></a>
                 </div>
             </div>
+            </div>
         </footer>
-
-
-    </main>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 </body>
