--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title">Comic Character Dashboard</h4>
+                    <h3 class="modal-title text-center">Comic Character Dashboard</h3>
                 </div>
                 <div class="modal-body">
                     <p>This dashboard features interactive charts to display data behind the story<a href="https://fivethirtyeight.com/features/women-in-comic-books/" target="_blank" class="inline-link" title=" Comic Books Are Still Made By Men, For Men And About Men"> Comic Books Are Still Made By Men, For Men And About Men</a>.
@@ -63,7 +63,12 @@
                 <div class="col-xs-12 nav-bar navbar-fixed-top">
                     <a href="#" class="title">Comic Character Dashboard</a>
                     <div id="reset-filters">
-                        <a href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>
+                        <div class="reset">
+                            <a href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>
+                        </div>
+                        <div class="info-icon">
+                            <a data-toggle="modal" data-target="#myModal"><i class="fas fa-info-circle"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -255,7 +260,9 @@
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+ 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <script src="static/js/script.js"></script>
