Titles added to icons

--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
                     <a href="#" class="title">Comic Character Dashboard</a>
                     <div id="reset-filters">
                         <div class="reset">
-                            <a href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>
+                           <!-- <a href="javascript:dc.filterAll(); dc.renderAll();">Reset All</a>-->
+                           <a href="javascript:dc.filterAll(); dc.renderAll();"><i class="fas fa-redo-alt" title = "Reset All"></i></a>
                         </div>
                         <div class="info-icon">
-                            <a data-toggle="modal" data-target="#myModal"><i class="fas fa-info-circle"></i></a>
+                            <a data-toggle="modal" data-target="#myModal"><i class="fas fa-info-circle" title="Information"></i></a>
                         </div>
                     </div>
                 </div>
@@ -251,7 +252,7 @@
                     <h5> &copy;Created by Stephy 2019</h5>
                 </div>
                 <div class="col-sm-6 return-top">
-                    <a href="#nav-header"><i class="fas fa-arrow-circle-up"></i></a>
+                    <a href="#nav-header"><i class="fas fa-arrow-circle-up" title = "Back to top"></i></a>
                 </div>
             </div>
         </div>
