Content added to modal

--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
                 <div class="modal-body">
                     <p>This dashboard features interactive charts to display data behind the story<a href="https://fivethirtyeight.com/features/women-in-comic-books/" target="_blank" class="inline-link" title=" Comic Books Are Still Made By Men, For Men And About Men"> Comic Books Are Still Made By Men, For Men And About Men</a>.
                         All charts are interactive and can get the results filtered when you click on the chart except scatterplot.</p>
-                </div>
+                    <p> The gender Icons and the gender percentage are displayed on the top left side.The percentage will change 
+                    accordingly when you click on the charts.</p>
+                    <p>The identity chart shows the number of characters who have different identities.</p>
+                    <p> The stacked bar chart displays the Alignment of the characters in relation to their gender.</p>
+                    
+                                    </div>
                 <div class="modal-footer">
 
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
@@ -249,7 +254,7 @@
         <div class="page-footer container-fluid">
             <div class="row">
                 <div class="col-sm-6 copyright">
-                    <h5> &copy;Created by Stephy 2019</h5>
+                    <h5> &copy; Created by Stephy 2019</h5>
                 </div>
                 <div class="col-sm-6 return-top">
                     <a href="#nav-header"><i class="fas fa-arrow-circle-up" title = "Back to top"></i></a>
