--- a/index.html
+++ b/index.html
@@ -297,10 +297,10 @@
     <footer>
         <div class="page-footer container-fluid">
             <div class="row">
-                <div class="col-sm-6 copyright">
+                <div class="col-xs-6 copyright">
                     <h5> &copy; Created by Stephy 2019</h5>
                 </div>
-                <div class="col-sm-6 return-top">
+                <div class="col-xs-6 return-top">
                     <a href="#nav-header"><i class="fas fa-arrow-circle-up" title = "Back to top"></i></a>
                 </div>
             </div>
