Modified padding for the sidebar

--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
                     <p> The gender Icons and the gender percentage are displayed on the top left side.The percentage will change accordingly when you click on the charts.</p>
                     <p>The identity chart shows the number of characters who have different identities.</p>
                     <p> The stacked bar chart displays the Alignment of the characters in relation to their gender.</p>
-                    <p> The scatterplot explains the number of appearance of each character in comic book and the year and the Alive barchart
-                    shows the number of alive and disesed characters.</p>
+                    <p> The scatterplot explains the number of appearance of each character in comic book and the year and the Alive barchart shows the number of alive and disesed characters.</p>
                     <p>The table has the name and urslug and the year the characters are first appeared in the books.</p>
-                    <p>All the original data is from<a href ="https://www.kaggle.com/fivethirtyeight/fivethirtyeight-comic-characters-dataset"target="_blank" class="inline-link" title ="Kaggle.com"> Kaggle</a></p>
+                    <p>All the original data is from<a href="https://www.kaggle.com/fivethirtyeight/fivethirtyeight-comic-characters-dataset" target="_blank" class="inline-link" title="Kaggle.com"> Kaggle</a></p>
 
                 </div>
                 <div class="modal-footer">
@@ -110,14 +109,15 @@
                             </div>
                         </div>
                     </div>
+                
 
-
-                    <!-------Piechart Identity------>
+                <!-------Piechart Identity------>
+              
                     <div class="content-wrapper">
                         <header class="chart-header">
                             <h3>Identity</h3>
                         </header>
-                         <div class="chart-content">
+                        <div class="chart-content">
                             <div id="identity" class="chart">
                                 <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();"><span style = "color:#4682B4;">Reset</span></a>
                             </div>
@@ -180,7 +180,7 @@
         </section>
         <!-------Scatterploter Appearance------>
 
-        <section id="apperance-alive" class="container-fluid" >
+        <section id="apperance-alive" class="container-fluid">
             <div class="row">
 
                 <div class="col-sm-12 col-md-8 scatterplot-appearance">
@@ -309,8 +309,8 @@
 
 
 
-   
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
