Pagination code issues rectified

--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
         </div>
         <div id="pagination">
             <span id="start"></span>-<span id="end"></span> of <span id="totalSize"></span>
-            <button id="prev" class="btn" onclick="prev()">Prev</button>
-            <button id="next" class="btn" onclick="next()">Next</button>
+            <button id="prev" class="btn">Prev</button>
+            <button id="next" class="btn">Next</button>
         </div>
 
         <!-------Table--
