Mediaquery added for navbar titles, icons and the Gender icon bar

--- a/index.html
+++ b/index.html
@@ -83,18 +83,16 @@
         </nav>
     </header>
 
-
     <main>
-
 
         <section id="align" class="container-fluid">
             <div class="row">
                 <!------Gender Icons------>
 
-                <div class="col-sm-8 col-md-5 sidebar container-fluid">
+                <div class="col-xs-12 col-sm-8 col-md-5 sidebar container-fluid">
                     <div class="content-wrapper">
 
-                        <div class="row align-items-center gender-percent">
+                        <div class="row gender-percent">
                             <div class="col-4 icon-percent">
                                 <div><i class="fas fa-male gender-icon" style="color:#4682B4"></i></div>
                                 <div id="male-percent" class="percent"></div>
@@ -109,7 +107,6 @@
                             </div>
                         </div>
                     </div>
-
 
                     <!-------Piechart Identity------>
 
@@ -126,10 +123,9 @@
                     </div>
                 </div>
 
-
                 <!-------Barchart Align------>
 
-                <div class="col-sm-12 col-md-7 alignment">
+                <div class="col-xs-12 col-md-7 alignment">
                     <div class="content-wrapper">
                         <header class="chart-header">
                             <h3>Alignment</h3>
@@ -155,7 +151,7 @@
         <section id="apperance-alive" class="container-fluid">
             <div class="row">
 
-                <div class="col-sm-12 col-md-8 scatterplot-appearance">
+                <div class="col-xs-12 col-md-8 scatterplot-appearance">
                     <div class="content-wrapper">
                         <header class="chart-header">
                             <h3>Appearance </h3>
@@ -170,7 +166,7 @@
                 </div>
                 <!-------Barchart Alive------>
 
-                <div class="col-sm-12 col-md-4 alive">
+                <div class="col-xs-12 col-md-4 alive">
                     <div class="content-wrapper">
                         <header class="chart-header">
                             <h3> Alive</h3>
@@ -234,7 +230,7 @@
 
 
 
-        <div class="chart col-sm-12" id="all-characters-div">
+        <div class="chart col-xs-12" id="all-characters-div">
             <div class="content-wrapper">
                 <h2>Comic Characters</h2>
                 <table id="all-characters"> </table>
@@ -245,21 +241,6 @@
             <button id="prev" class="btn">Prev</button>
             <button id="next" class="btn">Next</button>
         </div>
-
-        <!-------Table--
-
-        <section>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="chart col-sm-12" id="all-characters-div">
-                        <div class="content-wrapper">
-                            <h2>Comic Characters</h2>
-                            <table id="all-characters"> </table>
-                        </div>
-                    </div>
-                </div>
-        </section>
----->
 
     </main>
     <!-------Footer------>
