readme features added and testing.md file created

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="row">
                 <!------Gender Icons------>
 
-                <div class="col-xs-12 col-sm-8 col-md-5 sidebar container-fluid">
+                <div class="col-xs-12 col-lg-5 sidebar container-fluid">
                     <div class="content-wrapper">
 
                         <div class="row gender-percent">
@@ -125,7 +125,7 @@
 
                 <!-------Barchart Align------>
 
-                <div class="col-xs-12 col-md-7 alignment">
+                <div class="col-xs-12 col-lg-7 alignment">
                     <div class="content-wrapper">
                         <header class="chart-header">
                             <h3>Alignment</h3>
@@ -192,7 +192,7 @@
 
                 <!-------Eye Color------>
 
-                <div class="col-xs-12 col-sm-6 color">
+                <div class="col-xs-12 col-lg-6 color">
                     <div class="content-wrapper">
                         <header class="chart-header">
                             <h3>Eye Color</h3>
@@ -209,7 +209,7 @@
 
                 <!-------Hair Color------>
 
-                <div class="col-xs-12 col-sm-6 color">
+                <div class="col-xs-12 col-lg-6 color">
                     <div class="content-wrapper">
                         <header class="chart-header">
                             <h3>Hair Color</h3>
