--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
+    
     <!-- My CSS-->
     <link rel="stylesheet" href="static/css/style.css" type="text/css" />
 
@@ -25,8 +25,6 @@
 
     <!--JS Codes-->
     <script src="static/js/graph.js"></script>
-
-
 
 
 </head>
@@ -84,7 +82,6 @@
     </header>
 
     <main>
-
         <section id="align" class="container-fluid">
             <div class="row">
                 <!------Gender Icons------>
@@ -115,7 +112,7 @@
                             <h3>Identity</h3>
                         </header>
                         <div class="chart-content">
-                            <div id="identity" class="chart">
+                            <div id="identity" class="graph">
                                 <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();"><span style = "color:#4682B4; float:left;">Reset</span></a>
                             </div>
                             <p>Most of the characters have either secret or public identity,and there is a marginal difference between them.</p>
@@ -132,7 +129,7 @@
                         </header>
                         <div class="chart-content">
 
-                            <div id="bar-alignment" class="bar-chart">
+                            <div id="bar-alignment" class="graph">
                                 <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();">Reset</a>
                             </div>
 
@@ -146,7 +143,7 @@
 
             </div>
         </section>
-        <!-------Scatterploter Appearance------>
+        <!-------Scatterplot-Appearance------>
 
         <section id="apperance-alive" class="container-fluid">
             <div class="row">
@@ -172,7 +169,7 @@
                             <h3> Alive</h3>
                         </header>
                         <div class="chart-content">
-                            <div id="bar-alive">
+                            <div id="bar-alive" class="graph">
                                 <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();">Reset</a>
                             </div>
                             <p>A little over 75% of the characters are living as per the current data.</p>
@@ -198,7 +195,7 @@
                             <h3>Eye Color</h3>
                         </header>
                         <div class="chart-content">
-                            <div id="eye-color" class="chart">
+                            <div id="eye-color" class="graph">
                                 <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();">Reset</a>
                             </div>
                             <p> Most of the characters have blue or brown eyes.</p>
@@ -215,7 +212,7 @@
                             <h3>Hair Color</h3>
                         </header>
                         <div class="chart-content">
-                            <div id="hair-color" class="chart">
+                            <div id="hair-color" class="graph">
                                 <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();">Reset</a>
                             </div>
                             <p>With hair color section the most charcters chose black,brown or red hair but there are few more colors too.</p>
@@ -227,8 +224,6 @@
         </section>
 
         <!-------Table------->
-
-
 
         <div class="chart col-xs-12" id="all-characters-div">
             <div class="content-wrapper">
@@ -262,7 +257,6 @@
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
