chart sizes variation in tablet corrected

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
                 <!-------Eye Color------>
 
-                <div class="col-xs-12 col-lg-6 color">
+                <div class="col-xs-12 col-md-6">
                     <div class="content-wrapper">
                         <header class="chart-header">
                             <h3>Eye Color</h3>
@@ -206,7 +206,7 @@
 
                 <!-------Hair Color------>
 
-                <div class="col-xs-12 col-lg-6 color">
+                <div class="col-xs-12 col-md-6">
                     <div class="content-wrapper">
                         <header class="chart-header">
                             <h3>Hair Color</h3>
