--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="row">
                 <!------Gender Icons------>
 
-                <div class="col-xs-12 col-lg-5 sidebar container-fluid">
+                <div class="col-xs-12 col-md-5 sidebar container-fluid">
                     <div class="content-wrapper">
 
                         <div class="row gender-percent">
@@ -122,7 +122,7 @@
 
                 <!-------Barchart Align------>
 
-                <div class="col-xs-12 col-lg-7 alignment">
+                <div class="col-xs-12 col-md-7 alignment">
                     <div class="content-wrapper">
                         <header class="chart-header">
                             <h3>Alignment</h3>
@@ -130,7 +130,7 @@
                         <div class="chart-content">
 
                             <div id="bar-alignment" class="graph">
-                                <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();">Reset</a>
+                               <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();"><span style = "color:#4682B4; float:left;">Reset</span></a>
                             </div>
 
                             <p>When comparing the alignment with gender,female characters have the most numer of good alignment.</p>
@@ -154,9 +154,7 @@
                             <h3>Appearance </h3>
                         </header>
                         <div class="chart-content">
-                            <div id="appearance">
-                                <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();">Reset</a>
-                            </div>
+                            <div id="appearance"></div>
                             <p>The chart displays the number of apperances of the character in comic book and also the year of the first appearance in a comic book.</p>
                         </div>
                     </div>
@@ -170,7 +168,7 @@
                         </header>
                         <div class="chart-content">
                             <div id="bar-alive" class="graph">
-                                <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();">Reset</a>
+                                <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();"><span style = "color:#4682B4; float:left;">Reset</span></a>
                             </div>
                             <p>A little over 75% of the characters are living as per the current data.</p>
                         </div>
@@ -196,7 +194,7 @@
                         </header>
                         <div class="chart-content">
                             <div id="eye-color" class="graph">
-                                <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();">Reset</a>
+                                <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();"><span style = "color:#4682B4; float:left;">Reset</span></a>
                             </div>
                             <p> Most of the characters have blue or brown eyes.</p>
                             <p>Majority of the brown eyes characters either have black or brown hair.</p>
@@ -206,14 +204,14 @@
 
                 <!-------Hair Color------>
 
-                <div class="col-xs-12 col-md-6">
+                <div class="col-xs-12 col-md-6 pie-height">
                     <div class="content-wrapper">
                         <header class="chart-header">
                             <h3>Hair Color</h3>
                         </header>
                         <div class="chart-content">
                             <div id="hair-color" class="graph">
-                                <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();">Reset</a>
+                               <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();"><span style = "color:#4682B4; float:left;">Reset</span></a>
                             </div>
                             <p>With hair color section the most charcters chose black,brown or red hair but there are few more colors too.</p>
                             <p>Over 75% blond hair characters have blue eyes!</p>
