--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
                         </header>
                         <div class="chart-content">
                             <div id="appearance"></div>
-                            <p>The chart displays the number of apperances of the character in comic book and also the year of the first appearance in a comic book.</p>
+                            <p>The chart displays the number of apperances of the character in comic book and 
+                            also the year of the first appearance in a comic book.</p>
                         </div>
                     </div>
                 </div>
@@ -196,8 +197,8 @@
                             <div id="eye-color" class="graph">
                                 <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();"><span style = "color:#4682B4; float:left;">Reset</span></a>
                             </div>
-                            <p> Most of the characters have blue or brown eyes.</p>
-                            <p>Majority of the brown eyes characters either have black or brown hair.</p>
+                            <p> Most of the characters have blue or brown eyes.
+                                Majority of the brown eyes characters either have black or brown hair.</p>
                         </div>
                     </div>
                 </div>
@@ -213,8 +214,8 @@
                             <div id="hair-color" class="graph">
                                <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();"><span style = "color:#4682B4; float:left;">Reset</span></a>
                             </div>
-                            <p>With hair color section the most charcters chose black,brown or red hair but there are few more colors too.</p>
-                            <p>Over 75% blond hair characters have blue eyes!</p>
+                            <p>With hair color section the most charcters chose black,brown or red hair but there are few more colors too.
+                            Over 75% blond hair characters have blue eyes!</p>
                         </div>
                     </div>
                 </div>
