Footer copyright style modified

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <p>The identity chart shows the number of characters who have different identities.</p>
                     <p> The stacked bar chart displays the Alignment of the characters in relation to their gender.</p>
                     <p> The scatterplot explains the number of appearance of each character in comic book and the year and the Alive barchart shows the number of alive and disesed characters.</p>
-                    <p>The table has the name and urslug and the year the characters are first appeared in the books.</p>
+                    <p>The table has the name and URL slug and the year the characters are first appeared in the books.</p>
                     <p>All the original data is from<a href="https://www.kaggle.com/fivethirtyeight/fivethirtyeight-comic-characters-dataset" target="_blank" class="inline-link" title="Kaggle.com"> Kaggle</a></p>
 
                 </div>
@@ -134,7 +134,7 @@
                             </div>
 
                             <p>When comparing the alignment with gender,female characters have the most numer of good alignment.</p>
-                            <p>There is just one genderless charcter and which is in bad alignment either.</p>
+                            <p>There is just one genderless character and which is in bad alignment either.</p>
 
                         </div>
                     </div>
