Next and Prev button style modified

--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
         </div>
         <div id="pagination">
             <span id="start"></span>-<span id="end"></span> of <span id="totalSize"></span>
-            <button id="prev" class="btn">Prev</button>
-            <button id="next" class="btn">Next</button>
+            <button id="prev" class="btn btn-primary">Prev</button>
+            <button id="next" class="btn btn-primary">Next</button>
         </div>
 
     </main>
