Footer content size modified in medium devices

--- a/index.html
+++ b/index.html
@@ -223,8 +223,9 @@
         </section>
 
         <!-------Table------->
-
-        <div class="chart col-xs-12" id="all-characters-div">
+        
+     <section id="character-list" class="container-fluid">
+        <div class="col-xs-12" id="all-characters-div">
             <div class="content-wrapper">
                 <h2>Comic Characters</h2>
                 <table id="all-characters"> </table>
@@ -235,13 +236,13 @@
             <button id="prev" class="btn btn-primary">Prev</button>
             <button id="next" class="btn btn-primary">Next</button>
         </div>
-
+    </section>
     </main>
     <!-------Footer------>
 
     <footer>
-        <div class="page-footer container-fluid">
-            <div class="row">
+        <div class="container-fluid">
+            <div class="row footer-content">
                 <div class="col-xs-6 copyright">
                     <h5> &copy; Created by Stephy 2019</h5>
                 </div>
@@ -252,7 +253,7 @@
         </div>
     </footer>
 
-
+ 
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
