Modal content modified

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
 
-    <!--Modal-->
+    <!-- Modal -->
 
     <div class="modal" id="myModal">
         <div class="modal-dialog">
@@ -41,21 +41,21 @@
                     <h3 class="modal-title text-center">Comic Character Dashboard</h3>
                 </div>
                 <div class="modal-body">
+                    <p>Welcome to the Comic Character Dashboard!</p>
                     <p>This dashboard features interactive charts to display data behind the story<a href="https://fivethirtyeight.com/features/women-in-comic-books/" target="_blank" class="inline-link" title=" Comic Books Are Still Made By Men, For Men And About Men"> Comic Books Are Still Made By Men, For Men And About Men</a>.
                         All charts are interactive and can get the results filtered when you click on the chart except scatterplot.</p>
-                    <p> The gender Icons and the gender percentage are displayed on the top left side.The percentage will change accordingly when you click on the charts.</p>
-                    <p>The identity chart shows the number of characters who have different identities.</p>
-                    <p> The stacked bar chart displays the Alignment of the characters in relation to their gender.</p>
-                    <p> The scatterplot explains the number of appearance of each character in comic book and the year and the Alive barchart shows the number of alive and disesed characters.</p>
-                    <p>The table has the name and URL slug and the year the characters are first appeared in the books.</p>
+                    <p>The graphs render better on desktop and tablet, if you are on mobile, consider switching!</p> 
+                    <p>All graphs on the entire dashboard are connected. To reset them to default, click the redo icon on the top right side and you can
+                    reset in bar and piecharts in there itself by clicking on a reset button which appears when you click those graphs</p>
                     <p>All the original data is from<a href="https://www.kaggle.com/fivethirtyeight/fivethirtyeight-comic-characters-dataset" target="_blank" class="inline-link" title="Kaggle.com"> Kaggle</a></p>
-
+                    <p>This information can access again when you click on the information icon on the top rightside.</p>
                 </div>
                 <div class="modal-footer">
 
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
 
                 </div>
+                
             </div>
         </div>
     </div>
