The page moving from left to right in mobile view is fixed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://bootswatch.com/3/sandstone/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.min.css" type="text/css" />
 
-    <!--Font Awesome-->
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
     <!-- My CSS-->
@@ -23,7 +23,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
 
-    <!--JS Codes-->
+    <!-- JS Codes -->
     <script src="static/js/graph.js"></script>
 
 
@@ -60,7 +60,7 @@
         </div>
     </div>
 
-    <!--Header-->
+    <!-- Header -->
 
     <header>
         <nav class="container-fluid" id="nav-header">
@@ -85,7 +85,7 @@
         <section id="align" class="container-fluid">
             <div class="row">
 
-                <!--Gender Icons-->
+                <!-- Gender Icons -->
 
                 <div class="col-xs-12 col-md-5 sidebar container-fluid">
                     <div class="content-wrapper">
@@ -121,7 +121,7 @@
                     </div>
                 </div>
 
-                <!--Barchart Align-->
+                <!-- Barchart Align -->
 
                 <div class="col-xs-12 col-md-7 alignment">
                     <div class="content-wrapper">
@@ -145,7 +145,7 @@
             </div>
         </section>
 
-        <!--Scatterplot-Appearance-->
+        <!-- Scatterplot-Appearance -->
 
         <section id="apperance-alive" class="container-fluid">
             <div class="row">
@@ -162,7 +162,7 @@
                     </div>
                 </div>
 
-                <!--Barchart Alive-->
+                <!-- Barchart Alive -->
 
                 <div class="col-xs-12 col-md-4 alive">
                     <div class="content-wrapper">
@@ -183,12 +183,12 @@
         </section>
 
 
-        <!--Pie Charts-->
+        <!-- Pie Charts -->
 
         <section id="pie-section" class="container-fluid">
             <div class="row">
 
-                <!--Eye Color-->
+                <!-- Eye Color -->
 
                 <div class="col-xs-12 col-md-6">
                     <div class="content-wrapper">
@@ -204,7 +204,7 @@
                     </div>
                 </div>
 
-                <!--Hair Color-->
+                <!-- Hair Color -->
 
                 <div class="col-xs-12 col-md-6 pie-height">
                     <div class="content-wrapper">
@@ -222,7 +222,7 @@
             </div>
         </section>
 
-        <!--Table-->
+        <!-- Table -->
 
         <section id="character-list" class="container-fluid">
             <div class="col-xs-12" id="all-characters-div">
@@ -239,7 +239,7 @@
         </section>
     </main>
 
-       <!--Footer-->
+       <!-- Footer -->
 
     <footer>
         <div class="container-fluid">
