--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <!-- Scatterplot-Appearance -->
 
         <section id="apperance-alive" class="container-fluid">
-            <div class="row">
+            <div class="row div-height">
 
                 <div class="col-xs-12 col-md-8 scatterplot-appearance">
                     <div class="content-wrapper">
@@ -174,6 +174,7 @@
                                 <a class="reset" style="display: none" href="javascript: dc.filterAll(); dc.redrawAll();"><span style = "color:#4682B4; float:left;">Reset</span></a>
                             </div>
                             <p>A little over 75% of the characters are living as per the current data.</p>
+                            <p>67.52%  male and 30.27% female charcters are living! </p>
                         </div>
                     </div>
                 </div>
@@ -186,7 +187,7 @@
         <!-- Pie Charts -->
 
         <section id="pie-section" class="container-fluid">
-            <div class="row">
+            <div class="row div-height">
 
                 <!-- Eye Color -->
 
